# CMakeList.txt : CMake project for web_server, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("web_server")

# Add source to this project's executable.
add_executable (web_server "main.cpp"  )

# TODO: Add tests and install targets if needed.
